feat: github workflow updated

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,7 +2,7 @@ name: Python Unit Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, task3,task2, task1 ]
   pull_request:
     branches: [ main ]
 
@@ -27,3 +27,11 @@ jobs:
     - name: Run Preprocessing Verification
       run: |
         python tests/verify_preprocess.py
+
+    - name: Run Cleaning Verification
+      run: |
+        python tests/verify_cleaning.py
+
+    - name: Run Docs Verification
+      run: |
+        python tests/verify_docs.py
