--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,7 +2,7 @@ name: Python Unit Tests
 
 on:
   push:
-    branches: [ main, task3,task2, task1 ]
+    branches: [ main, task3, task2, task1 ]
   pull_request:
     branches: [ main ]
 
@@ -22,16 +22,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+        pip install pytest pytest-cov
 
-    - name: Run Preprocessing Verification
+    - name: Run Unit Tests with pytest
       run: |
-        python tests/verify_preprocess.py
+        pytest tests/ -v --cov=src --cov-report=term-missing
 
-    - name: Run Cleaning Verification
+    - name: Generate Coverage Badge
+      if: success()
       run: |
-        python tests/verify_cleaning.py
-
-    - name: Run Docs Verification
-      run: |
-        python tests/verify_docs.py
+        coverage_percent=$(pytest tests/ --cov=src --cov-report=term | grep "TOTAL" | awk '{print $4}' | sed 's/%//')
+        echo "Coverage: ${coverage_percent}%"
