--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,16 @@ jupyter>=1.0.0
 ipykernel>=6.20.0
 
 # NLP & Embeddings
-sentence-transformers>=2.2.2
-transformers>=4.30.0
 torch>=2.0.0
+transformers>=4.30.0
+sentence-transformers>=2.2.2
 
 # Vector Database
 faiss-cpu>=1.7.4
 
 # RAG Framework
-langchain>=0.0.200
-langchain-community>=0.0.1
+langchain>=0.1.0
+langchain-community>=0.0.10
 langchain-huggingface>=0.0.1
 
 # Utilities
@@ -25,5 +25,6 @@ tqdm>=4.65.0
 scikit-learn>=1.2.0
 pyarrow
 fastparquet
-gradio
-streamlit
+
+# UI
+streamlit>=1.30.0
