--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ pandas>=2.0.0
 numpy>=1.24.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
-jupyter>=1.0.0
 ipykernel>=6.20.0
 
-# NLP & Embeddings
-torch>=2.0.0
+# NLP & Embeddings (torch installed separately in CI)
 transformers>=4.30.0
 sentence-transformers>=2.2.2
 
@@ -24,7 +22,6 @@ python-dotenv>=1.0.0
 tqdm>=4.65.0
 scikit-learn>=1.2.0
 pyarrow
-fastparquet
 
 # UI
 streamlit>=1.30.0
