--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 # Core Data Science
-pandas>=2.0.0
-numpy>=1.24.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-ipykernel>=6.20.0
+pandas
+numpy
+matplotlib
+seaborn
+ipykernel
 
 # NLP & Embeddings (torch installed separately in CI)
-transformers>=4.30.0
-sentence-transformers>=2.2.2
+transformers
+sentence-transformers
 
 # Vector Database
-faiss-cpu>=1.7.4
+faiss-cpu
 
 # RAG Framework
-langchain>=0.1.0
-langchain-community>=0.0.10
-langchain-huggingface>=0.0.1
+langchain
+langchain-community
+langchain-huggingface
 
 # Utilities
-python-dotenv>=1.0.0
-tqdm>=4.65.0
-scikit-learn>=1.2.0
+python-dotenv
+tqdm
+scikit-learn
 pyarrow
 
 # UI
-streamlit>=1.30.0
+streamlit
