--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -20,14 +20,14 @@ jobs:
 
     - name: Install PyTorch (CPU only)
       run: |
-        pip install torch --index-url https://download.pytorch.org/whl/cpu
+        pip install torch==2.5.1 --index-url https://download.pytorch.org/whl/cpu
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+       
 
-    - name: Run Unit Tests with pytest
+    - name: Run Consolidated Core Tests
       run: |
-        pytest tests/ -v --cov=src --cov-report=term-missing
+        pytest tests/test_core.py -v --cov=src --cov-report=term-missing
