--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,10 +24,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        
         pip install -r requirements.txt
        
 
     - name: Run Consolidated Core Tests
       run: |
-        pytest tests/test_core.py -v --cov=src --cov-report=term-missing
+        pytest tests/test_core.py -v 
